--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     padding:  0px;
     margin: 0px;
 }
+.all {
+    display: flex;
+    flex-direction: column;
+}
 div {
     border: 3px solid black;
     padding: 4px;
@@ -12,21 +16,49 @@ div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 50px;
+    height: 150px;
 }
 .top-top {
     margin-top: 0px;
     margin-bottom: 0px;
 }
 .top-base {
-    display: flex;
+    width: 50%;
+    min-width: 300px;
+    display: grid;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    border-width: 0.5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+        "top-a top-a top-a top-a top-a"
+        "top-b top-c top-d top-e top-e";
 }
+.top-a {
+   grid-area: top-a;
+}
+.top-b {
+   grid-area: top-b; 
+}
+.top-c {
+    grid-area: top-c;
+}
+.top-d {
+    grid-area: top-d;
+    
+}
+.top-e {
+    grid-area: top-e;
+}
+
 
 .main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 800px;
+    height: auto;
     margin-left: 0;
     margin-right: 0;
 }
@@ -38,8 +70,19 @@ div {
     width: 200px;
 }
 .main-rigth {
-    display: flex;
-    flex-direction: column;
-    
+    display: grid;
     width: 100%;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    gap: 4px;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+}
+.card {
+    height: 200px;
+    width: 150px;
+}
+.base {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 200px;
 }
